--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Wrok list</title>
-</head>
-<body>
-	<script type="text/javascript" src="js/app/app.js"></script>
-</body>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Wrok list</title>
+	</head>
+	<body>
+		<p>Привет мир</p>
+		<!-- <div id="app-wrapper"></div> -->
+		<!-- <script type="text/javascript" src="js/app/app.js"></script> -->
+	</body>
 </html>
