Настроена структура проекта (Redux). Настроено добавление элементов на страницу через popup-окно.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Wrok list</title>
+		<link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="js/app/style.css">
+		<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="libs/bootstrap/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<p>Привет мир</p>
-		<!-- <div id="app-wrapper"></div> -->
-		<!-- <script type="text/javascript" src="js/app/app.js"></script> -->
+		<div id="app-wrapper"></div>
+		<script type="text/javascript" src="/js/app/app.js"></script>
 	</body>
 </html>
